Update LogIn Security

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,34 @@ error.unauthorized=B?n ch?a ??ng nh?p
 error.forbidden=B?n không có quy?n truy c?p ch?c n?ng này
 success=Thành công
 error.unknown=L?i h? th?ng. Vui lòng th? l?i sau!
+
+# ??ng nh?p thành công
+login.success=??ng nh?p thành công
+
+# L?i ??ng nh?p
+auth.failed=Sai tên ??ng nh?p ho?c m?t kh?u
+auth.error=Xác th?c th?t b?i. Vui lòng th? l?i sau.
+
+# L?i không tìm th?y user
+error.user.not_found=Không tìm th?y ng??i dùng
+
+# L?i truy c?p không ?? quy?n
+error.access.denied=B?n không có quy?n truy c?p ch?c n?ng này
+
+# L?i chung
+error.system=L?i h? th?ng, vui lòng th? l?i sau
+
+# L?i thi?u d? li?u ??u vào
+error.input.invalid=D? li?u ??u vào không h?p l?
+
+# L?i server
+error.server=L?i máy ch?
+
+# L?i xác th?c token
+error.token.invalid=Token không h?p l? ho?c ?ã h?t h?n
+
+# L?i khi mã hóa password
+error.password.encode=L?i mã hóa m?t kh?u
+
+# L?i khi thao tác v?i database
+error.database=L?i truy v?n c? s? d? li?u
